kubernetes/arr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arr
  labels:
    goldilocks.fairwinds.com/enabled: "true"
